--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -21,7 +21,7 @@ body {
     height: 100%;
 }
 
-body:before {
+/* body:before {
     height: 50%;
     width: 100%;
     position: absolute;
@@ -30,7 +30,7 @@ body:before {
     background: #128ff2;
     content: "";
     z-index: 0;
-}
+} */
 
 .clearfix:after {
     display: block;
@@ -145,9 +145,10 @@ button.accent {
     background-color: #fff;
     box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
     margin-top: 30px;
+    margin-left: 300px;
     height: calc(100% - 60px);
     max-height: 600px;
-    position: relative;
+    display: inline-block;
 }
 
 #chat-page ul {
@@ -296,3 +297,14 @@ button.accent {
         font-size: 1.1em;
     }
 }
+
+.allUsers {
+    	border: 1px solid black;
+    	width: 200px;
+    	z-index: 100;
+    	display: inline-block;
+    	margin-top: 35px;
+    	margin-left: 35px;
+    	vertical-align: top;
+
+    }
