stat page updated

--- a/src/main/resources/static/css/yu_main.css
+++ b/src/main/resources/static/css/yu_main.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+body {
+	padding: 0px;
+	margin: 0px;
+}
+
 .front_logo {
 	display: block;
 	margin: 0 auto;
@@ -38,6 +43,12 @@
 	font-family: 'Architects Daughter', cursive;
 	font-size: 50px;
 }
+.title_stat {
+	text-align: center;
+	font-family: 'Architects Daughter', cursive;
+	font-size: 50px;
+	margin-top: -50px;
+}
 
 .orangee {
 	color: orange;
@@ -48,4 +59,55 @@
 .errors {
 	color: red;
 	text-align: center;
+}
+
+.orange_bg {
+	height: 50%;
+	width: 100%;
+	background-color: orange;
+	position: absolute;
+	box-shadow: 25px 25px 25px 25px gray;
+	top:50%;
+	z-index: 2;
+}
+
+.stat_logo {
+	position: relative;
+	left: -50%;
+	z-index: 4;
+}
+
+.stat_container {
+	z-index: 3;
+	position: relative;
+	background-color: white;
+	width: 400px;
+	height: 400px;
+	border-radius: 25px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+	left: -50%;
+	margin-top:-190px;
+	
+}
+
+.center1 {
+	position: absolute;
+	left: 50%;
+}
+
+.center2 {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+}
+
+.stats {
+	text-align: center;
+	padding-top: 100px;
+	font-family: 'Architects Daughter', cursive;
+	font-size: 40px;
+}
+
+stat_details {
+	text-align:center;
 }
