--- a/src/main/resources/static/css/yu_loginModal.css
+++ b/src/main/resources/static/css/yu_loginModal.css
@@ -61,7 +61,8 @@ body {
 }
 
 .modal_main {
-	width: 300px;
+	width: 400px;
+	height: 300px;
 	padding-bottom: 10px;
 	/*height: 330px;*/
 	background: #fff;
@@ -121,7 +122,7 @@ body {
 .log_acc {
 	display: inline;
 	font-size: 0.9em;
-	margin-left: 35px;
+	margin-left: 90px;
 }
 
 
