--- a/src/main/resources/static/css/yu_main.css
+++ b/src/main/resources/static/css/yu_main.css
@@ -132,8 +132,31 @@ body {
 	top: 50%;
 }
 
+.pick_form {
+	text-align: center;
+	margin-top: 60px;
+}
+
 .final_pick {
 	font-size: 20px;
 	text-align: center;
 	font-family: 'Architects Daughter', cursive;
+}
+
+.pick_btn {
+	width: 400px;
+	position: absolute;
+	top: calc(100% - 45px);
+	left:0;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	background-color: orange;
+	color: white;
+	font-family: 'Architects Daughter', cursive;
+	font-size: 28px;
+}
+
+.pick_inputbox {
+	width: 200px;
+	height: 45px;
 }
